[package]
name = "simple-rust"
version = "0.1.0"
authors = ["Pierce Bartine <piercebartine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
actix-web = "3"
tracing = "0.1.21"
tracing-appender = "0.1.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
