[package]
name = "simple-rust"
version = "0.1.0"
authors = [ "Pierce Bartine" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
clap = "3.0.0-beta.2"
tracing = "0.1.21"
tracing-actix-web = "0.2.1"
tracing-appender = "0.1.1"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
